@@ -70,6 +70,7 @@
 #include "AppSerialize.h"
 #include "ProjectFilePathsDlg.h"
 #include "MergeCmdLineInfo.h"
+#include "FileOrFolderSelect.h"
 
 /*
  One source file must compile the stubs for multimonitor
